--- a/src/Login/register.html
+++ b/src/Login/register.html
@@ -21,18 +21,23 @@
     ></script>
   </head>
 
-  <body>
+  <body class="md:h-screen flex flex-col justify-between">
     <nav
-      class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
+      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
-        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
+        <ul
+          class="text-xl fullHd:text-[28px] font-medium font-lora flex gap-x-2 items-center"
+        >
           <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
-        <ul class="flex gap-x-10 uppercase font-medium font-roboto">
+        <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
-            <a href="../index.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="../index.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
+            >
               <i class="fa-solid fa-house"></i>
               <span>Home</span>
             </a>
@@ -40,7 +45,7 @@
           <li>
             <a
               href="../shoppingCart.html"
-              class="flex items-center gap-2 text-[12px]"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-cart-shopping"></i>
               <span>Shopping Cart</span>
@@ -49,73 +54,105 @@
           <li>
             <a
               href="../Orders/orderList.html"
-              class="flex items-center gap-2 text-[12px]"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
               <span>Orders</span>
             </a>
           </li>
           <li>
-            <a href="login.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="login.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
+            >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
             </a>
           </li>
         </ul>
       </ul>
+
+      <div
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+      >
+        <a href="index.html">Home</a>
+        <a href="shoppingCart.html">Shopping Cart</a>
+        <a href="./Orders/orderList.html">Orders</a>
+        <a href="./Login/login.html">Login</a>
+      </div>
     </nav>
 
-    <section class="full-page container mx-auto p-16">
-      <div class="w-full h-full flex p-8">
-        <div class="h-full w-1/2">
+    <section
+      class="container mx-auto xl:px-20 py-10 md:pb-0 md:pt-20 fullHd:pt-0 ultraQ:w-[90%] fullHd:w-full fullHd:h-[60%]"
+    >
+      <div
+        class="h-full flex flex-wrap justify-center xl:justify-evenly fullHd:justify-center lg:gap-x-20 fullHd:gap-x-0"
+      >
+        <div class="mb-4 md:mb-0 fullHd:h-full fullHd:w-[45%]">
           <img
             src="../images/auth.png"
             alt=""
-            class="h-full w-[70%] object-cover mx-auto"
+            class="h-full xl:h-full w-[70%] md:w-[90%] xl:w-full object-contain mx-auto fullHd:w-2/3"
           />
         </div>
-        <form class="h-full w-1/2 flex flex-col items-start justify-between">
-          <div class="flex flex-col gap-y-2">
+        <form
+          class="flex flex-col items-center sm:items-start sm:justify-between w-2/3 fullHd:w-[45%] fullHd:h-full fullHd:gap-y-16 sm:w-1/2 pt-4 sm:pt-0 gap-y-4 lg:w-2/5 xl:w-1/2 xl:gap-y-8 fullHd:ml-10"
+        >
+          <div class="flex flex-col gap-y-2 fullHd:gap-y-6">
             <div
-              class="text-important-black-color font-lora font-semibold text-3xl"
+              class="text-important-black-color font-lora font-bold text-4xl fullHd:text-[48px]"
             >
               Register
             </div>
-            <div class="text-normal-black-color text-sm font-semibold">
+            <div
+              class="text-normal-black-color font-roboto text-md font-normal fullHd:text-[20px]"
+            >
               Create a new account
             </div>
           </div>
-          <div class="flex flex-col gap-y-6 w-full">
-            <div class="flex flex-col gap-y-2 text-sm w-2/3">
-              <div>Email</div>
+          <div class="flex flex-col gap-y-6 w-full fullHd:pb-4 fullHd:gap-y-8">
+            <div class="flex flex-col gap-y-2 text-sm md:w-2/3 fullHd:gap-y-4">
+              <div
+                class="font-roboto font-bold text-normal-black-color xl:text-xs fullHd:text-[14px]"
+              >
+                Email
+              </div>
               <input
                 type="email"
                 placeholder="Email"
                 required
-                class="w-full pl-2 border-2 border-gray-200 rounded-sm outline-none py-1"
+                class="w-full pl-2 border-[1px] fullHd:w-full ultraQ:w-3/4 fullHd:p-[10px] text-gray-color placeholder-gray-color font-roboto fullHd:text-[16px] font-normal border-border-color rounded-[4px] outline-none py-1"
               />
             </div>
-            <div class="flex flex-col gap-y-2 text-sm w-2/3">
-              <div>Password</div>
+            <div class="flex flex-col gap-y-2 text-sm md:w-2/3 fullHd:gap-y-4">
+              <div
+                class="font-roboto font-bold text-normal-black-color xl:text-xs fullHd:text-[14px]"
+              >
+                Password
+              </div>
               <input
                 type="password"
                 placeholder="Password"
                 required
-                class="w-full pl-2 border-2 border-gray-200 rounded-sm outline-none py-1"
+                class="w-full pl-2 border-[1px] placeholder-gray-color ultraQ:w-3/4 fullHd:w-full text-gray-color fullHd:text-[16px] fullHd:p-[10px] font-roboto font-normal border-border-color rounded-[4px] outline-none py-1"
               />
             </div>
-            <div class="flex flex-col gap-y-2 text-sm w-full">
-              <div>Confirm Password</div>
+            <div class="flex flex-col gap-y-2 text-sm md:w-2/3 fullHd:gap-y-4">
+              <div
+                class="font-roboto font-bold text-normal-black-color xl:text-xs fullHd:text-[14px]"
+              >
+                Confirm password
+              </div>
               <input
                 type="password"
                 placeholder="Confirm Password"
                 required
-                class="w-2/3 pl-2 border-2 border-gray-200 rounded-sm outline-none py-1"
+                class="w-full pl-2 border-[1px] placeholder-gray-color ultraQ:w-3/4 fullHd:w-full text-gray-color fullHd:text-[16px] fullHd:p-[10px] font-roboto font-normal border-border-color rounded-[4px] outline-none py-1"
               />
             </div>
           </div>
           <button
-            class="bg-black text-white w-1/3 rounded-sm py-1.5 text-xs font-lora font-normal"
+            class="bg-black text-white-color w-2/3 sm:w-1/3 xl:w-[30%] ultraQ:w-1/4 fullHd:py-2 fullHd:text-[14px] rounded-[4px] text:xs xl:text-[10px] py-1.5 font-lora font-normal cursor-pointer mt-8 fullHd:mt-0"
           >
             Register
           </button>
@@ -123,11 +160,21 @@
       </div>
     </section>
 
-    <footer class="h-14 mt-10 bg-footer-color text-xs">
-      <div class="container m-auto flex items-center justify-between h-full">
+    <footer
+      class="h-14 bg-footer-color fullHd:h-[70px] text-xs px-4 fullHd:px-2"
+    >
+      <div
+        class="container m-auto fullHd:w-[90%] fullHd:px-8 flex items-center justify-between h-full"
+      >
         <div class="flex gap-x-2 items-center">
-          <div>@Copyright</div>
-          <div class="text-normal-black-color font-roboto font-bold underline">
+          <div
+            class="font-roboto font-normal text-normal-black-color fullHd:text-[14px]"
+          >
+            @Copyright
+          </div>
+          <div
+            class="text-normal-black-color fullHd:text-[14px] font-roboto font-bold underline"
+          >
             IT Perspectives
           </div>
         </div>
