--- a/src/Login/register.html
+++ b/src/Login/register.html
@@ -178,6 +178,13 @@
             IT Perspectives
           </div>
         </div>
+        <a href="#">
+          <button
+            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
+          >
+            <i class="fa-solid fa-chevron-up text-white"></i>
+          </button>
+        </a>
       </div>
     </footer>
   </body>
