--- a/src/Orders/orderDetails.html
+++ b/src/Orders/orderDetails.html
@@ -23,16 +23,21 @@
 
   <body>
     <nav
-      class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
+      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
-        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
+        <ul
+          class="text-xl fullHd:text-[28px] font-medium font-lora flex gap-x-2 items-center"
+        >
           <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
-        <ul class="flex gap-x-10 uppercase font-medium font-roboto">
+        <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
-            <a href="../index.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="../index.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
+            >
               <i class="fa-solid fa-house"></i>
               <span>Home</span>
             </a>
@@ -40,7 +45,7 @@
           <li>
             <a
               href="../shoppingCart.html"
-              class="flex items-center gap-2 text-[12px]"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-cart-shopping"></i>
               <span>Shopping Cart</span>
@@ -48,8 +53,8 @@
           </li>
           <li>
             <a
-              href="orderList.html"
-              class="flex items-center gap-2 text-[12px]"
+              href="../Orders/orderList.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
               <span>Orders</span>
@@ -57,8 +62,8 @@
           </li>
           <li>
             <a
-              href="../Login/login.html"
-              class="flex items-center gap-2 text-[12px]"
+              href="login.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
@@ -66,49 +71,73 @@
           </li>
         </ul>
       </ul>
-    </nav>
 
-    <section class="my-5 container mx-auto p-20 flex">
-      <div class="w-full relative">
+      <div
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+      >
+        <a href="index.html">Home</a>
+        <a href="shoppingCart.html">Shopping Cart</a>
+        <a href="./Orders/orderList.html">Orders</a>
+        <a href="./Login/login.html">Login</a>
+      </div>
+    </nav>
+    <section
+      class="my-5 container mx-auto px-4 gap-x-4 pt-10 md:flex justify-between fullHd:mb-20"
+    >
+      <div
+        class="w-full xl:w-2/3 relative flex justify-center xl:justify-start fullHd:justify-center fullHd:w-3/5 lg:pt-20"
+      >
         <img
           src="../images/order.png"
           alt="image-order"
-          class="h-2/3 w-2/3 pt-20 object-cover z-20 relative"
+          class="h-1/3 md:h-1/2 w-2/3 md:w-full lg:w-3/4 xl:w-4/5 fullHd:w-[512px] fullHd:h-[768px] xl:h-[55%] xl:p-2 fullHd:p-0 object-cover z-20 relative"
         />
-        <div class="bg-carrousel-color w-4/5 h-3/5 absolute top-40 z-10"></div>
+        <div
+          class="bg-carrousel-color w-4/5 md:w-full xl:h-[38%] lg:w-3/4 h-full lg:right-4 md:h-2/5 fullHd:h-[768px] fullHd:right-20 fullHd:w-[70%] xl:top-48 lg:h-2/5 absolute top-5 md:top-36 z-10"
+        ></div>
       </div>
       <div
-        class="w-full border border-gray-200 rounded-sm p-4 flex flex-col gap-y-8"
+        class="w-full border mt-16 fullHd:space-y-1.5 md:mt-0 border-border-color rounded-[4px] p-4 fullHd:px-10 xl:p-8 xl:my-4 xl:w-3/4 fullHd:w-[55%] flex flex-col gap-y-8"
       >
         <div
-          class="text-2xl text-important-black-color font-semibold font-lora"
+          class="text-2xl xl:text-3xl text-important-black-color fullHd:text-[38px] font-semibold font-lora"
         >
           Order Details
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="text-xs font-roboto font-semibold">Contact Details</div>
-          <div class="w-full flex flex-wrap gap-x-4 text-sm">
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
+            Contact Details
+          </div>
+          <div
+            class="w-full flex flex-wrap gap-x-4 gap-y-4 fullHd:gap-x-0 fullHd:justify-between md:gap-y-0 text-sm"
+          >
             <input
               type="text"
               placeholder="First Name"
               required
-              class="py-1 pl-2 border-gray-200 border-2 outline-none w-[48%]"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-gray-color fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full md:w-[48%]"
             />
             <input
               type="text"
               placeholder="Last Name"
               required
-              class="py-1 pl-2 border-gray-200 border-2 outline-none w-[48%]"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full md:w-[48%]"
             />
           </div>
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="text-xs font-roboto font-semibold">Billing Details</div>
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
+            Billing Details
+          </div>
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <select
               name="Countries Selection"
               id=""
-              class="outline-none border-2 border-gray-200 py-1 font-roboto text-normal-black-color"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             >
               <option value="" selected disabled>Select a country</option>
               <option value="RO">Romania</option>
@@ -120,56 +149,61 @@
               type="text"
               placeholder="Adress"
               required
-              class="py-1 pl-2 border-gray-200 border-2 outline-none w-full"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
             <input
               type="number"
               placeholder="Phone Number"
               required
               required
-              class="py-1 pl-2 border-gray-200 border-2 outline-none w-full"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
             <div class="flex gap-x-2 items-center">
-              <input type="checkbox" />
+              <input type="checkbox" checked class="accent-carrousel-color" />
               <div
-                class="text-xs font-roboto font-normal text-normal-black-color"
+                class="font-roboto font-normal fullHd:text-sm text-gray-color"
               >
                 Use address for delivery
               </div>
             </div>
           </div>
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="text-xs font-roboto font-semibold">Adress Details</div>
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
+            Adress Details
+          </div>
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <select
               name="Countries Selection"
               id=""
-              class="outline-none border-2 border-gray-200 py-1 font-roboto text-normal-black-color"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             >
               <option value="" selected disabled>Select a country</option>
               <option value="RO">Romania</option>
               <option value="RU">Russia</option>
               <option value="UA">Ukraine</option>
             </select>
-
             <input
               type="text"
               placeholder="Adress"
               required
-              class="py-1 pl-2 border-gray-200 border-2 outline-none w-full"
+              class="ppy-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
             <input
               type="number"
               placeholder="Phone Number"
               required
               required
-              class="py-1 pl-2 border-gray-200 border-2 outline-none w-full"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
           </div>
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="font-lora font-bold text-important-black-color text-xs">
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="ftext-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
             Payment Type
           </div>
           <div class="flex gap-x-4 text-xs">
@@ -183,26 +217,36 @@
             </div>
           </div>
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="text-xs font-roboto font-semibold">Delivery Date</div>
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
+            Delivery Date
+          </div>
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <input
               type="date"
-              class="w-full py-1 pl-2 border-gray-200 border-2 outline-none"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
           </div>
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="text-xs font-roboto font-semibold">Observations</div>
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
+            Observations
+          </div>
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <textarea
               placeholder="Observations"
-              class="border-2 border-gray-200 p-2"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full"
             ></textarea>
           </div>
         </div>
-        <div class="flex flex-col gap-y-2">
-          <div class="text-xs font-roboto font-semibold">
+        <div class="flex flex-col gap-y-2 fullHd:gap-y-4">
+          <div
+            class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
+          >
             Would you recommand us?
           </div>
           <div class="w-full flex gap-x-2 items-center text-sm">
@@ -210,36 +254,56 @@
             <label for="recommandation-check">Would you recommand us?</label>
           </div>
         </div>
-        <div class="flex w-full justify-between">
+        <div
+          class="flex flex-col gap-y-4 items-center md:items-start md:gap-y-0 md:flex-row w-full justify-between"
+        >
           <a
             href="orderList.html"
-            class="border-2 border-gray-200 w-1/3 text-sm text-center"
+            class="border border-important-black-color rounded-sm w-2/3 md:w-1/3 text-sm text-center"
           >
-            <button class="py-1 rounded-md w-full cursor-pointer">
+            <button
+              class="py-2 w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
+            >
               Cancel
             </button>
           </a>
-          <a href="OrderModal.html" class="w-1/3 text-sm text-center">
+          <a
+            href="OrderModal.html"
+            class="border w-2/3 bg-black rounded-[4px] md:w-1/3 text-sm text-center"
+          >
             <button
-              class="py-1.5 bg-black text-white rounded-md cursor-pointer w-full"
+              class="py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
             >
               Update Order
             </button>
           </a>
         </div>
       </div>
+      <div class="w-[12%]"></div>
     </section>
 
-    <footer class="h-14 bg-footer-color text-xs">
-      <div class="container m-auto flex items-center justify-between h-full">
+    <footer
+      class="h-14 bg-footer-color fullHd:h-[70px] text-xs px-4 fullHd:px-2"
+    >
+      <div
+        class="container m-auto fullHd:w-[90%] fullHd:px-8 flex items-center justify-between h-full"
+      >
         <div class="flex gap-x-2 items-center">
-          <div>@Copyright</div>
-          <div class="text-normal-black-color font-roboto font-bold underline">
+          <div
+            class="font-roboto font-normal text-normal-black-color fullHd:text-[14px]"
+          >
+            @Copyright
+          </div>
+          <div
+            class="text-normal-black-color fullHd:text-[14px] font-roboto font-bold underline"
+          >
             IT Perspectives
           </div>
         </div>
         <a href="#">
-          <button class="p-1 px-1.5 rounded-sm bg-black">
+          <button
+            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
+          >
             <i class="fa-solid fa-chevron-up text-white"></i>
           </button>
         </a>
