--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -23,7 +23,7 @@
 
   <body class="h-screen flex flex-col justify-between">
     <nav
-      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
+      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
         <ul
@@ -53,7 +53,7 @@
           </li>
           <li>
             <a
-              href="orderList.html"
+              href="../Orders/orderList.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
@@ -62,7 +62,7 @@
           </li>
           <li>
             <a
-              href="../Login/login.html"
+              href="login.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-user"></i>
@@ -81,7 +81,6 @@
         <a href="./Login/login.html">Login</a>
       </div>
     </nav>
-    <div class=""></div>
 
     <section
       class="container mx-auto xl:w-[70%] fullHd:w-[75%] fullHd:px-10 h-4/5 p-4"
@@ -154,9 +153,12 @@
               </div>
               <div class="flex gap-x-2 items-center text-sm">
                 <i class="fa-solid fa-pencil"></i>
-                <span class="font-roboto fullHd:text-[20px]"
-                  >Edit or remove Items</span
+                <a
+                  href="./orderDetails.html"
+                  class="font-roboto fullHd:text-[20px]"
                 >
+                  Edit or remove Items
+                </a>
               </div>
             </div>
           </div>
@@ -217,9 +219,12 @@
               </div>
               <div class="flex gap-x-2 items-center text-sm">
                 <i class="fa-solid fa-pencil"></i>
-                <span class="font-roboto fullHd:text-[20px]"
-                  >Edit or remove Items</span
+                <a
+                  href="orderDetails.html"
+                  class="font-roboto fullHd:text-[20px]"
                 >
+                  Edit or remove Items
+                </a>
               </div>
             </div>
           </div>
@@ -280,9 +285,12 @@
               </div>
               <div class="flex gap-x-2 items-center text-sm">
                 <i class="fa-solid fa-pencil"></i>
-                <span class="font-roboto fullHd:text-[20px]"
-                  >Edit or remove Items</span
+                <a
+                  href="orderDetails.html"
+                  class="font-roboto fullHd:text-[20px]"
                 >
+                  Edit or remove Items
+                </a>
               </div>
             </div>
           </div>
@@ -343,9 +351,12 @@
               </div>
               <div class="flex gap-x-2 items-center text-sm">
                 <i class="fa-solid fa-pencil"></i>
-                <span class="font-roboto fullHd:text-[20px]"
-                  >Edit or remove Items</span
+                <a
+                  href="orderDetails.html"
+                  class="font-roboto fullHd:text-[20px]"
                 >
+                  Edit or remove Items
+                </a>
               </div>
             </div>
           </div>
@@ -406,9 +417,12 @@
               </div>
               <div class="flex gap-x-2 items-center text-sm">
                 <i class="fa-solid fa-pencil"></i>
-                <span class="font-roboto fullHd:text-[20px]"
-                  >Edit or remove Items</span
+                <a
+                  href="orderDetails.html"
+                  class="font-roboto fullHd:text-[20px]"
                 >
+                  Edit or remove Items
+                </a>
               </div>
             </div>
           </div>
@@ -433,6 +447,13 @@
             IT Perspectives
           </div>
         </div>
+        <a href="#">
+          <button
+            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
+          >
+            <i class="fa-solid fa-chevron-up text-white"></i>
+          </button>
+        </a>
       </div>
     </footer>
   </body>
