--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -24,19 +24,19 @@
 
   <body class="h-screen flex flex-col justify-between">
     <nav
-      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
+      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
         <ul
           class="text-xl fullHd:text-[28px] font-medium font-lora flex gap-x-2 items-center"
         >
-          <img src="images/logo.png" alt="" class="" />
+          <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
         <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
             <a
-              href="index.html"
+              href="../index.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-house"></i>
@@ -45,7 +45,7 @@
           </li>
           <li>
             <a
-              href="shoppingCart.html"
+              href="../shoppingCart.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-cart-shopping"></i>
@@ -54,7 +54,7 @@
           </li>
           <li>
             <a
-              href="./Orders/orderList.html"
+              href="../Orders/orderList.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
@@ -63,7 +63,7 @@
           </li>
           <li>
             <a
-              href="./Login/login.html"
+              href="login.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-user"></i>
@@ -379,6 +379,13 @@
             IT Perspectives
           </div>
         </div>
+        <a href="#">
+          <button
+            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
+          >
+            <i class="fa-solid fa-chevron-up text-white"></i>
+          </button>
+        </a>
       </div>
     </footer>
   </body>
