--- a/src/viewBook.html
+++ b/src/viewBook.html
@@ -23,24 +23,29 @@
 
   <body class="h-screen flex flex-col justify-between">
     <nav
-      class="h-14 flex items-center bg-white-color px-20 w-full text-important-black-color"
+      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
-        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
-          <img src="images/logo.png" alt="" class="" />
+        <ul
+          class="text-xl fullHd:text-[28px] font-medium font-lora flex gap-x-2 items-center"
+        >
+          <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
-        <ul class="flex gap-x-10 uppercase font-medium font-roboto">
+        <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
-            <a href="index.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="../index.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
+            >
               <i class="fa-solid fa-house"></i>
               <span>Home</span>
             </a>
           </li>
           <li>
             <a
-              href="shoppingCart.html"
-              class="flex items-center gap-2 text-[12px]"
+              href="../shoppingCart.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-cart-shopping"></i>
               <span>Shopping Cart</span>
@@ -48,21 +53,33 @@
           </li>
           <li>
             <a
-              href="./Orders/orderList.html"
-              class="flex items-center gap-2 text-[12px]"
+              href="../Orders/orderList.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
               <span>Orders</span>
             </a>
           </li>
           <li>
-            <a href="login.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="login.html"
+              class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
+            >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
             </a>
           </li>
         </ul>
       </ul>
+
+      <div
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+      >
+        <a href="index.html">Home</a>
+        <a href="shoppingCart.html">Shopping Cart</a>
+        <a href="./Orders/orderList.html">Orders</a>
+        <a href="./Login/login.html">Login</a>
+      </div>
     </nav>
 
     <section class="flex items-center container m-auto w-3/4">
@@ -110,14 +127,31 @@
       </div>
     </section>
 
-    <footer class="h-14 mt-10 bg-footer-color text-xs">
-      <div class="container m-auto flex items-center justify-between h-full">
+    <footer
+      class="h-14 bg-footer-color fullHd:h-[70px] text-xs px-4 fullHd:px-2"
+    >
+      <div
+        class="container m-auto fullHd:w-[90%] fullHd:px-8 flex items-center justify-between h-full"
+      >
         <div class="flex gap-x-2 items-center">
-          <div>@Copyright</div>
-          <div class="text-normal-black-color font-roboto font-bold underline">
+          <div
+            class="font-roboto font-normal text-normal-black-color fullHd:text-[14px]"
+          >
+            @Copyright
+          </div>
+          <div
+            class="text-normal-black-color fullHd:text-[14px] font-roboto font-bold underline"
+          >
             IT Perspectives
           </div>
         </div>
+        <a href="#">
+          <button
+            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
+          >
+            <i class="fa-solid fa-chevron-up text-white"></i>
+          </button>
+        </a>
       </div>
     </footer>
   </body>
