--- a/src/Orders/orderDetails.html
+++ b/src/Orders/orderDetails.html
@@ -189,7 +189,7 @@
               type="text"
               placeholder="Adress"
               required
-              class="ppy-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
             <input
               type="number"
@@ -262,7 +262,7 @@
             class="border border-important-black-color rounded-sm w-2/3 md:w-1/3 text-sm text-center"
           >
             <button
-              class="py-2 w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
+              class="py-1 full:py-2 w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
             >
               Cancel
             </button>
@@ -272,7 +272,7 @@
             class="border w-2/3 bg-black rounded-[4px] md:w-1/3 text-sm text-center"
           >
             <button
-              class="py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
+              class="py-1.5 fullHd:py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
             >
               Update Order
             </button>
