--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -30,13 +30,13 @@
         <ul
           class="text-xl fullHd:text-[28px] font-medium font-lora flex gap-x-2 items-center"
         >
-          <img src="../images/logo.png" alt="" class="" />
+          <img src="images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
         <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
             <a
-              href="../index.html"
+              href="index.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-house"></i>
@@ -45,7 +45,7 @@
           </li>
           <li>
             <a
-              href="../shoppingCart.html"
+              href="shoppingCart.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-cart-shopping"></i>
@@ -54,7 +54,7 @@
           </li>
           <li>
             <a
-              href="../Orders/orderList.html"
+              href="./Orders/orderList.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
@@ -63,7 +63,7 @@
           </li>
           <li>
             <a
-              href="login.html"
+              href="./Login/login.html"
               class="flex items-center gap-2 text-[12px] fullHd:text-[16px]"
             >
               <i class="fa-solid fa-user"></i>
